@@ -1,4 +1,11 @@
 2005-10-02  Benhur Stein <benhur@inf.ufsm.br>
+        * StorageController/Encapsulate.m: remove field names discovery
+        * General/PajeType.[hm]: add knownEventTypes variable and
+          -isKnownEventType: method
+        * PajeSimulator/User{Event,State}.m: use new method to speed up
+          field name discovery
+
+2005-10-02  Benhur Stein <benhur@inf.ufsm.br>
         * SpaceTimeViewer/DrawView+Drawing.m: new drawing code for events with
           support for aggregates.
 
